--- a/test/wide-text/shrinkwrap.yaml
+++ b/test/wide-text/shrinkwrap.yaml
@@ -1,6 +1,7 @@
 dependencies:
   '@types/node': 10.12.0
   tslib: 1.9.3
+  wide-text: 'link:../../packages/wide-text'
 packages:
   /@types/node/10.12.0:
     dev: false
@@ -16,3 +17,4 @@ shrinkwrapVersion: 3
 specifiers:
   '@types/node': ^10.12.0
   tslib: ^1.9.3
+  wide-text: 'file:../../packages/wide-text'
