--- a/packages/wide-text-types/package.json
+++ b/packages/wide-text-types/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "wide-text",
+  "name": "wide-text-types",
   "version": "0.0.0",
-  "description": "Create w i d e  t e x t from normal text",
+  "description": "TypeScript types used by wide-text package",
   "author": "Hoàng Văn Khải <hvksmr1996@gmail.com>",
   "license": "MIT",
   "homepage": "https://github.com/ksxnodeapps/fun-little-utilities#readme",
@@ -14,12 +14,11 @@
   },
   "keywords": [
     "wide",
-    "text"
+    "text",
+    "type"
   ],
-  "main": "index.js",
   "dependencies": {
     "tslib": "^1.9.3",
-    "wide-text-types": "^0.0.0",
     "@types/node": "^10.12.0"
   },
   "engines": {
