--- a/packages/wide-text-bin/package.json
+++ b/packages/wide-text-bin/package.json
@@ -19,9 +19,9 @@
     "command"
   ],
   "bin": {
-    "widen": "bin",
-    "wide-text": "bin",
-    "create-wide-text": "bin"
+    "widen": "index",
+    "wide-text": "index",
+    "create-wide-text": "index"
   },
   "dependencies": {
     "yargs": "^12.0.2",
