--- a/packages/catls-lib/package.json
+++ b/packages/catls-lib/package.json
@@ -18,8 +18,11 @@
   ],
   "dependencies": {
     "fs-extra": "^7.0.0",
+    "shell-escape": "^0.2.0",
     "tslib": "^1.9.3",
+    "split-shell-buffer": "^0.0.0",
     "@types/fs-extra": "^5.0.4",
+    "@types/shell-escape": "^0.2.0",
     "@types/node": "^10.12.0"
   },
   "engines": {
