Turn everything into async

--- a/packages/split-shell-buffer/package.json
+++ b/packages/split-shell-buffer/package.json
@@ -24,6 +24,7 @@
     "iter-tools": "^6.1.6",
     "create-array-equal": "^0.0.1",
     "typescript-char-code": "^0.0.1",
+    "monorepo-shared-assets": "^0.0.17",
     "tslib": "^1.9.3",
     "@types/node": "^10.12.0"
   },
