--- a/packages/split-shell-buffer/shrinkwrap.yaml
+++ b/packages/split-shell-buffer/shrinkwrap.yaml
@@ -1,6 +1,7 @@
 dependencies:
   '@types/node': 10.12.10
   '@types/ramda': 0.25.42
+  construct-iterator: 'link:../construct-iterator'
   create-array-equal: 0.0.1
   iter-tools: 6.1.6
   monorepo-shared-assets: 0.0.17
@@ -126,6 +127,7 @@ shrinkwrapVersion: 3
 specifiers:
   '@types/node': ^10.12.0
   '@types/ramda': ^0.25.42
+  construct-iterator: ^0.0.0
   create-array-equal: ^0.0.1
   iter-tools: ^6.1.6
   monorepo-shared-assets: ^0.0.17
