--- a/packages/split-shell-buffer/package.json
+++ b/packages/split-shell-buffer/package.json
@@ -25,6 +25,7 @@
     "ramda": "^0.26.0",
     "create-array-equal": "^0.0.1",
     "typescript-char-code": "^0.0.1",
+    "monorepo-shared-assets": "^0.0.17",
     "tslib": "^1.9.3",
     "iterate-evented-stream": "^0.0.0",
     "@types/ramda": "^0.25.42",
