--- a/packages/iterate-evented-stream/package.json
+++ b/packages/iterate-evented-stream/package.json
@@ -25,6 +25,7 @@
     "remote-controlled-promise": "^0.0.4",
     "monorepo-shared-assets": "^0.0.17",
     "tslib": "^1.9.3",
+    "evented-stream-types": "^0.0.0",
     "@types/ramda": "^0.25.42",
     "@types/node": "^10.12.0"
   },
