--- a/packages/split-shell-buffer/package.json
+++ b/packages/split-shell-buffer/package.json
@@ -28,6 +28,7 @@
     "monorepo-shared-assets": "^0.0.17",
     "tslib": "^1.9.3",
     "iterate-evented-stream": "^0.0.0",
+    "evented-stream-types": "^0.0.0",
     "@types/ramda": "^0.25.42",
     "@types/node": "^10.12.0"
   },
