Reword evented-stream-types.description

--- a/packages/evented-stream-types/package.json
+++ b/packages/evented-stream-types/package.json
@@ -1,7 +1,7 @@
 {
   "name": "evented-stream-types",
   "version": "0.0.0",
-  "description": "Collection of types used by evented-stream-* packages",
+  "description": "Collection of types used by evented-stream packages",
   "author": "Hoàng Văn Khải <hvksmr1996@gmail.com>",
   "license": "MIT",
   "homepage": "https://github.com/ksxnodeapps/fun-little-utilities#readme",
