--- a/test/evented-stream/shrinkwrap.yaml
+++ b/test/evented-stream/shrinkwrap.yaml
@@ -1,4 +1,5 @@
 dependencies:
+  evented-stream: 'link:../../packages/evented-stream'
   evented-stream-types: 'link:../../packages/evented-stream-types'
   iterate-evented-stream: 'link:../../packages/iterate-evented-stream'
   monorepo-shared-assets: 0.0.17
@@ -60,7 +61,6 @@ registry: 'https://registry.npmjs.org/'
 shrinkwrapMinorVersion: 9
 shrinkwrapVersion: 3
 specifiers:
-  evented-stream-types: 'file:../../packages/evented-stream-types'
-  iterate-evented-stream: 'file:../../packages/iterate-evented-stream'
+  evented-stream: 'file:../../packages/evented-stream'
   monorepo-shared-assets: ^0.0.17
   static-type-assert: ^3.0.1
