--- a/packages/combine-evented-stream/package.json
+++ b/packages/combine-evented-stream/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "tslib": "^1.9.3",
     "evented-stream-types": "^0.0.0",
+    "event-target-proxy": "^0.0.0",
     "@types/node": "^10.12.0"
   },
   "engines": {
