--- a/packages/combine-evented-stream/shrinkwrap.yaml
+++ b/packages/combine-evented-stream/shrinkwrap.yaml
@@ -1,5 +1,6 @@
 dependencies:
   '@types/node': 10.12.10
+  event-target-proxy: 'link:../event-target-proxy'
   evented-stream-types: 'link:../evented-stream-types'
   tslib: 1.9.3
 packages:
@@ -16,5 +17,6 @@ shrinkwrapMinorVersion: 9
 shrinkwrapVersion: 3
 specifiers:
   '@types/node': ^10.12.0
+  event-target-proxy: ^0.0.0
   evented-stream-types: ^0.0.0
   tslib: ^1.9.3
