--- a/packages/split-shell-buffer/package.json
+++ b/packages/split-shell-buffer/package.json
@@ -27,6 +27,7 @@
     "typescript-char-code": "^0.0.1",
     "monorepo-shared-assets": "^0.0.17",
     "tslib": "^1.9.3",
+    "event-target-proxy": "^0.0.0",
     "iterate-evented-stream": "^0.0.0",
     "evented-stream-types": "^0.0.0",
     "@types/ramda": "^0.25.42",
