--- a/packages/split-shell-buffer/shrinkwrap.yaml
+++ b/packages/split-shell-buffer/shrinkwrap.yaml
@@ -1,8 +1,10 @@
 dependencies:
   '@types/node': 10.12.10
   '@types/ramda': 0.25.42
+  combine-evented-stream: 'link:../combine-evented-stream'
   construct-iterator: 'link:../construct-iterator'
   create-array-equal: 0.0.1
+  event-target-proxy: 'link:../event-target-proxy'
   evented-stream-types: 'link:../evented-stream-types'
   iter-tools: 6.1.6
   iterate-evented-stream: 'link:../iterate-evented-stream'
@@ -130,6 +132,7 @@ specifiers:
   '@types/node': ^10.12.0
   '@types/ramda': ^0.25.42
   create-array-equal: ^0.0.1
+  event-target-proxy: ^0.0.0
   evented-stream-types: ^0.0.0
   iter-tools: ^6.1.6
   iterate-evented-stream: ^0.0.0
