--- a/packages/catls-lib/package.json
+++ b/packages/catls-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "catls-lib",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Core APIs used by catls",
   "author": "Hoàng Văn Khải <hvksmr1996@gmail.com>",
   "license": "MIT",
@@ -22,7 +22,7 @@
     "typescript-miscellaneous": "^0.1.1",
     "convenient-typescript-utilities": "^0.0.3",
     "tslib": "^1.9.3",
-    "split-shell-buffer": "^1.0.0-rc",
+    "split-shell-buffer": "^1.0.0-rc.0",
     "ts-await-event": "^0.0.0",
     "@types/fs-extra": "^5.0.4",
     "@types/shell-escape": "^0.2.0",
