--- a/packages/catls-lib/shrinkwrap.yaml
+++ b/packages/catls-lib/shrinkwrap.yaml
@@ -2,6 +2,7 @@ dependencies:
   '@types/node': 10.12.18
   '@types/shell-escape': 0.2.0
   convenient-typescript-utilities: 0.0.3
+  miscellaneous-decorators: 'link:../miscellaneous-decorators'
   shell-escape: 0.2.0
   split-shell-buffer: 'link:../split-shell-buffer'
   ts-await-event: 'link:../ts-await-event'
@@ -54,6 +55,7 @@ specifiers:
   '@types/node': ^10.12.18
   '@types/shell-escape': ^0.2.0
   convenient-typescript-utilities: ^0.0.3
+  miscellaneous-decorators: ^0.0.0
   shell-escape: ^0.2.0
   split-shell-buffer: ^1.0.0-rc.2
   ts-await-event: ^0.0.0
