Use shell-quote instead of shell-escape

--- a/packages/catls-lib/package.json
+++ b/packages/catls-lib/package.json
@@ -17,13 +17,13 @@
     "ls"
   ],
   "dependencies": {
-    "shell-escape": "^0.2.0",
+    "shell-quote": "^1.6.1",
     "typescript-miscellaneous": "^0.1.1",
     "convenient-typescript-utilities": "^0.0.3",
     "tslib": "^1.9.3",
     "split-shell-buffer": "^1.0.0-rc.2",
     "ts-await-event": "^0.0.0",
-    "@types/shell-escape": "^0.2.0",
+    "@types/shell-quote": "^1.6.0",
     "@types/node": "^10.12.18"
   },
   "engines": {
