--- a/packages/pretty-exec/package.json
+++ b/packages/pretty-exec/package.json
@@ -13,8 +13,8 @@
     "url": "https://github.com/ksxnodeapps/fun-little-utilities/issues"
   },
   "bin": {
-    "pretty-exec": "bin/index",
-    "print-and-execute": "bin/index"
+    "pretty-exec": "bin/pretty-exec/index",
+    "print-and-execute": "bin/pretty-exec/index"
   },
   "dependencies": {
     "chalk": "^2.4.2",
