--- a/packages/pretty-exec/package.json
+++ b/packages/pretty-exec/package.json
@@ -20,8 +20,10 @@
   },
   "dependencies": {
     "chalk": "^2.4.2",
+    "shell-escape": "^0.2.0",
     "split-string-once": "0.0.0",
     "tslib": "^1.10.0",
+    "@types/shell-escape": "^0.2.0",
     "@types/node": "^12.7.5"
   }
 }
