--- a/packages/string-template-format/package.json
+++ b/packages/string-template-format/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@tsfun/function": "^0.0.1",
     "tslib": "^1.10.0",
+    "just-json-type": "^0.0.0",
     "@types/node": "^12.7.8"
   }
 }
