--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "author": "Hoàng Văn Khải <hvksmr1996@gmail.com>",
   "license": "MIT",
-  "homepage": "https://github.com/ksxnodeapps/fun-little-utilities#readme",
+  "homepage": "https://ksxnodeapps.github.io/fun-little-utilities/",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ksxnodeapps/fun-little-utilities.git"
