--- a/packages/construct-iterator/package.json
+++ b/packages/construct-iterator/package.json
@@ -4,7 +4,7 @@
   "description": "Utilities to create synchronous/asynchronous iterators from a next() -> { done, value }",
   "author": "Hoàng Văn Khải <hvksmr1996@gmail.com>",
   "license": "MIT",
-  "homepage": "https://github.com/ksxnodeapps/fun-little-utilities#readme",
+  "homepage": "https://ksxnodeapps.github.io/fun-little-utilities/",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ksxnodeapps/fun-little-utilities.git"
