--- a/packages/event-target-proxy/package.json
+++ b/packages/event-target-proxy/package.json
@@ -4,7 +4,7 @@
   "description": "A helper for creating event target proxies",
   "author": "Hoàng Văn Khải <hvksmr1996@gmail.com>",
   "license": "MIT",
-  "homepage": "https://github.com/ksxnodeapps/fun-little-utilities#readme",
+  "homepage": "https://ksxnodeapps.github.io/fun-little-utilities/",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ksxnodeapps/fun-little-utilities.git"
