--- a/packages/string-template-format-base/package.json
+++ b/packages/string-template-format-base/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "string-template-format",
-  "version": "0.2.2",
-  "description": "String template tag that accepts any value and returns a string",
+  "name": "string-template-format-base",
+  "version": "0.1.0",
+  "description": "Create string template tag that transform values into strings",
   "author": "Hoàng Văn Khải <hvksmr1996@gmail.com>",
   "license": "MIT",
   "homepage": "https://ksxnodeapps.github.io/fun-little-utilities/",
@@ -17,17 +17,13 @@
     "printf",
     "format",
     "template",
-    "string"
+    "string",
+    "tag",
+    "create"
   ],
   "sideEffects": false,
   "dependencies": {
     "tslib": "^1.10.0",
-    "string-template-format-base": "^0.1.0",
-    "string-template-format-compose": "^0.1.0",
-    "string-template-format-inspect": "^0.1.0",
-    "string-template-format-json": "^0.1.0",
-    "string-template-format-tostring": "^0.1.0",
-    "string-template-format-uri": "^0.1.0",
     "@types/node": "^12.7.8"
   }
 }
