--- a/packages/mkcmdargv/package.json
+++ b/packages/mkcmdargv/package.json
@@ -17,12 +17,11 @@
     "create-command-arguments": "./bin/executable"
   },
   "dependencies": {
-    "ramda": "^0.26.1",
     "js-yaml": "^3.13.1",
     "fs-extra": "^8.1.0",
+    "@tsfun/array": "^0.0.0",
     "split-iterable": "^0.1.3",
     "tslib": "^1.10.0",
-    "@types/ramda": "^0.26.39",
     "@types/js-yaml": "^3.12.1",
     "@types/fs-extra": "^8.0.1",
     "@types/node": "^13.1.6"
