--- a/packages/find-executable/package.json
+++ b/packages/find-executable/package.json
@@ -1,6 +1,6 @@
 {
   "name": "find-executable",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "Search for a name that is executable",
   "author": "Hoàng Văn Khải <hvksmr1996@gmail.com>",
   "license": "MIT",
@@ -18,9 +18,10 @@
   ],
   "bin": "find-executable",
   "dependencies": {
-    "ts-yargs": "^0.1.4",
+    "yargs": "^15.1.0",
     "find-executable-lib": "^0.1.5",
     "tslib": "^1.10.0",
+    "@types/yargs": "^15.0.0",
     "@types/node": "^13.1.6"
   },
   "engines": {
