Split mkcmdargv into -lib and -cli

--- a/packages/mkcmdargv-cli/package.json
+++ b/packages/mkcmdargv-cli/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mkcmdargv",
-  "version": "0.1.4",
-  "description": "Convert environment variables to command-line arguments",
+  "name": "mkcmdargv-cli",
+  "version": "0.1.0",
+  "description": "Program to convert environment variables to command-line arguments",
   "author": "Hoàng Văn Khải <hvksmr1996@gmail.com>",
   "license": "MIT",
   "homepage": "https://ksxnodeapps.github.io/fun-little-utilities/",
@@ -12,14 +12,13 @@
   "bugs": {
     "url": "https://github.com/ksxnodeapps/fun-little-utilities/issues"
   },
-  "bin": {
-    "mkcmdargv": "bin",
-    "create-command-arguments": "bin"
-  },
+  "sideEffects": false,
+  "bin": "bin",
   "dependencies": {
+    "js-yaml": "^3.13.1",
     "tslib": "^1.10.0",
-    "mkcmdargv-cli": "^0.1.0",
     "mkcmdargv-lib": "^0.1.0",
+    "@types/js-yaml": "^3.12.1",
     "@types/node": "^13.1.6"
   }
 }
