--- a/packages/mkcmdargv-lib/package.json
+++ b/packages/mkcmdargv-lib/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mkcmdargv",
-  "version": "0.1.4",
-  "description": "Convert environment variables to command-line arguments",
+  "name": "mkcmdargv-lib",
+  "version": "0.1.0",
+  "description": "Functions to convert environment variables to command-line arguments",
   "author": "Hoàng Văn Khải <hvksmr1996@gmail.com>",
   "license": "MIT",
   "homepage": "https://ksxnodeapps.github.io/fun-little-utilities/",
@@ -12,14 +12,13 @@
   "bugs": {
     "url": "https://github.com/ksxnodeapps/fun-little-utilities/issues"
   },
-  "bin": {
-    "mkcmdargv": "bin",
-    "create-command-arguments": "bin"
-  },
+  "sideEffects": false,
   "dependencies": {
+    "fs-extra": "^8.1.0",
+    "split-iterable": "^0.1.2",
+    "@tsfun/array": "^0.0.0",
     "tslib": "^1.10.0",
-    "mkcmdargv-cli": "^0.1.0",
-    "mkcmdargv-lib": "^0.1.0",
+    "@types/fs-extra": "^8.0.1",
     "@types/node": "^13.1.6"
   }
 }
