--- a/packages/simple-fake-path/package.json
+++ b/packages/simple-fake-path/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fake-path",
+  "name": "simple-fake-path",
   "version": "0.0.0",
   "description": "Mockable fake path module",
   "author": "Hoàng Văn Khải <hvksmr1996@gmail.com>",
