--- a/packages/available-npm-name/package.json
+++ b/packages/available-npm-name/package.json
@@ -18,7 +18,9 @@
   ],
   "sideEffects": false,
   "dependencies": {
+    "node-fetch": "^2.6.0",
     "tslib": "^1.10.0",
+    "@types/node-fetch": "^2.5.4",
     "@types/node": "^13.7.0"
   }
 }
