--- a/packages/available-npm-name/package.json
+++ b/packages/available-npm-name/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "node-fetch": "^2.6.0",
     "tslib": "^1.10.0",
+    "string-stream-utils": "^0.0.1",
     "@types/node-fetch": "^2.5.4",
     "@types/node": "^13.7.0"
   }
