--- a/packages/available-npm-name/package.json
+++ b/packages/available-npm-name/package.json
@@ -16,12 +16,15 @@
     "package",
     "test"
   ],
+  "bin": "cli/available-npm-name",
   "sideEffects": false,
   "dependencies": {
     "node-fetch": "^2.6.0",
+    "yargs": "^15.1.0",
     "tslib": "^1.10.0",
     "string-stream-utils": "^0.0.1",
     "@types/node-fetch": "^2.5.4",
+    "@types/yargs": "^15.0.3",
     "@types/node": "^13.7.0"
   }
 }
