Complete parallel implementation

--- a/packages/available-npm-name/package.json
+++ b/packages/available-npm-name/package.json
@@ -22,6 +22,7 @@
     "node-fetch": "^2.6.0",
     "yargs": "^15.1.0",
     "tslib": "^1.10.0",
+    "iterate-evented-stream": "^0.1.6",
     "string-stream-utils": "^0.0.1",
     "@types/node-fetch": "^2.5.4",
     "@types/yargs": "^15.0.3",
