--- a/packages/available-npm-name/package.json
+++ b/packages/available-npm-name/package.json
@@ -20,10 +20,10 @@
   "sideEffects": false,
   "dependencies": {
     "node-fetch": "^2.6.0",
+    "rxjs": "^6.5.4",
     "yargs": "^15.1.0",
     "tslib": "^1.10.0",
-    "iterate-evented-stream": "^0.1.6",
-    "string-stream-utils": "^0.0.1",
+    "remote-controlled-promise": "^0.0.6",
     "@types/node-fetch": "^2.5.4",
     "@types/yargs": "^15.0.3",
     "@types/node": "^13.7.0"
