--- a/packages/line-observable-rxjs/package.json
+++ b/packages/line-observable-rxjs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "line-observable-rxjs",
   "version": "0.0.0",
-  "description": "Haskell-like lines for RxJs",
+  "description": "Convert an input stream to observable of lines",
   "author": "Hoàng Văn Khải <hvksmr1996@gmail.com>",
   "license": "MIT",
   "homepage": "https://ksxnodeapps.github.io/fun-little-utilities/",
