--- a/packages/available-npm-name/package.json
+++ b/packages/available-npm-name/package.json
@@ -24,6 +24,7 @@
     "yargs": "^15.1.0",
     "tslib": "^1.10.0",
     "remote-controlled-promise": "^0.0.6",
+    "line-observable-rxjs": "^0.0.0",
     "@types/node-fetch": "^2.5.4",
     "@types/yargs": "^15.0.3",
     "@types/node": "^13.7.0"
