--- a/packages/combine-evented-stream/package.json
+++ b/packages/combine-evented-stream/package.json
@@ -19,6 +19,10 @@
     "join",
     "async"
   ],
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "tslib": "^1.10.0",
     "evented-stream-types": "^0.1.5",
