--- a/packages/evented-stream-types/package.json
+++ b/packages/evented-stream-types/package.json
@@ -21,6 +21,10 @@
     "iterable",
     "typescript"
   ],
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "tslib": "^1.10.0",
     "@types/node": "^13.7.0"
