--- a/packages/find-executable-lib/package.json
+++ b/packages/find-executable-lib/package.json
@@ -16,6 +16,10 @@
     "executable",
     "realpath"
   ],
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "which": "^2.0.2",
     "tslib": "^1.10.0",
