--- a/packages/line-observable-rxjs/package.json
+++ b/packages/line-observable-rxjs/package.json
@@ -18,6 +18,10 @@
     "characters"
   ],
   "sideEffects": false,
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
