--- a/packages/simple-delay/package.json
+++ b/packages/simple-delay/package.json
@@ -18,6 +18,10 @@
     "async"
   ],
   "sideEffects": false,
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "tslib": "^1.10.0",
     "@types/node": "^13.7.0"
