--- a/packages/simple-fake-console/package.json
+++ b/packages/simple-fake-console/package.json
@@ -17,6 +17,10 @@
     "fake",
     "test"
   ],
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "tslib": "^1.10.0",
     "@types/node": "^13.7.0"
