--- a/packages/string-stream-utils/package.json
+++ b/packages/string-stream-utils/package.json
@@ -19,6 +19,10 @@
     "chunk"
   ],
   "sideEffects": false,
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "tslib": "^1.10.0",
     "@types/node": "^13.7.0"
