--- a/packages/string-template-format-tostring/package.json
+++ b/packages/string-template-format-tostring/package.json
@@ -18,6 +18,10 @@
     "template"
   ],
   "sideEffects": false,
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "tslib": "^1.10.0",
     "string-template-format-base": "^0.1.4",
