--- a/packages/table-parser-cli/package.json
+++ b/packages/table-parser-cli/package.json
@@ -18,6 +18,10 @@
     "cvtarrobjtbl": "bin",
     "table-parser-cli": "bin"
   },
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "yargs": "^15.1.0",
     "tslib": "^1.10.0",
