--- a/packages/wide-text-bin/package.json
+++ b/packages/wide-text-bin/package.json
@@ -23,6 +23,10 @@
     "wide-text": "wide-text",
     "create-wide-text": "wide-text"
   },
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "yargs": "^15.1.0",
     "tslib": "^1.10.0",
