--- a/packages/construct-iterator/package.json
+++ b/packages/construct-iterator/package.json
@@ -18,6 +18,10 @@
     "done",
     "value"
   ],
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "monorepo-shared-assets": "^0.0.19",
     "tslib": "^1.10.0",
