--- a/packages/event-target-proxy/package.json
+++ b/packages/event-target-proxy/package.json
@@ -18,6 +18,10 @@
     "proxy",
     "agent"
   ],
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "tslib": "^1.10.0",
     "advanced-map-initialized": "^0.0.4",
