--- a/packages/evented-stream/package.json
+++ b/packages/evented-stream/package.json
@@ -20,6 +20,10 @@
     "async",
     "iterable"
   ],
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "tslib": "^1.10.0",
     "iterate-evented-stream": "^0.1.6",
