--- a/packages/find-executable/package.json
+++ b/packages/find-executable/package.json
@@ -17,6 +17,10 @@
     "realpath"
   ],
   "bin": "find-executable",
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "yargs": "^15.1.0",
     "find-executable-lib": "^0.1.6",
