--- a/packages/git-sorted-tags/package.json
+++ b/packages/git-sorted-tags/package.json
@@ -20,6 +20,10 @@
     "tag"
   ],
   "bin": "git-sorted-tags",
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "yargs": "^15.1.0",
     "tslib": "^1.10.0",
