--- a/packages/iterate-evented-stream/package.json
+++ b/packages/iterate-evented-stream/package.json
@@ -20,6 +20,10 @@
     "async",
     "iterable"
   ],
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "advanced-map-initialized": "^0.0.4",
     "remote-controlled-promise": "^0.0.6",
