--- a/packages/mkcmdargv/package.json
+++ b/packages/mkcmdargv/package.json
@@ -16,6 +16,10 @@
     "mkcmdargv": "bin",
     "create-command-arguments": "bin"
   },
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "tslib": "^1.10.0",
     "mkcmdargv-cli": "^0.1.2",
