--- a/packages/parse-markdown-table-cli/package.json
+++ b/packages/parse-markdown-table-cli/package.json
@@ -22,6 +22,10 @@
   "bin": {
     "parse-markdown-table": "bin"
   },
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "yargs": "^15.1.0",
     "tslib": "^1.10.0",
