--- a/packages/parse-markdown-table/package.json
+++ b/packages/parse-markdown-table/package.json
@@ -17,6 +17,10 @@
     "markdown"
   ],
   "sideEffects": false,
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "tslib": "^1.10.0",
     "string-stream-utils": "^0.0.1",
