--- a/packages/split-shell-buffer/package.json
+++ b/packages/split-shell-buffer/package.json
@@ -20,6 +20,10 @@
     "sgr",
     "shell"
   ],
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "iter-tools": "^6.2.6",
     "create-array-equal": "^0.0.3",
