--- a/packages/string-template-format-base/package.json
+++ b/packages/string-template-format-base/package.json
@@ -22,6 +22,10 @@
     "create"
   ],
   "sideEffects": false,
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "tslib": "^1.10.0",
     "@types/node": "^13.7.0"
