--- a/packages/string-template-format-json/package.json
+++ b/packages/string-template-format-json/package.json
@@ -21,6 +21,10 @@
     "string"
   ],
   "sideEffects": false,
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "tslib": "^1.10.0",
     "just-json-type": "^0.1.4",
