--- a/packages/table-parser-base/package.json
+++ b/packages/table-parser-base/package.json
@@ -13,6 +13,10 @@
     "url": "https://github.com/ksxnodeapps/fun-little-utilities/issues"
   },
   "sideEffects": false,
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "iter-tools": "^6.2.6",
     "advanced-map-initialized": "^0.0.4",
