--- a/packages/ts-await-event/package.json
+++ b/packages/ts-await-event/package.json
@@ -18,6 +18,10 @@
     "await",
     "promise"
   ],
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "tslib": "^1.10.0",
     "@types/node": "^13.7.0"
