--- a/packages/ts-yargs/package.json
+++ b/packages/ts-yargs/package.json
@@ -17,6 +17,10 @@
     "type",
     "command-line-arguments"
   ],
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "yargs": "^15.1.0",
     "tslib": "^1.10.0",
