--- a/packages/wide-text-types/package.json
+++ b/packages/wide-text-types/package.json
@@ -17,6 +17,10 @@
     "text",
     "type"
   ],
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "tslib": "^1.10.0",
     "@types/node": "^13.7.0"
