--- a/packages/wide-text/package.json
+++ b/packages/wide-text/package.json
@@ -17,6 +17,9 @@
     "text"
   ],
   "main": "index.js",
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "types": "index.d.ts",
   "dependencies": {
     "tslib": "^1.10.0",
     "wide-text-types": "^0.1.5",
