--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "compilerOptions": {
-    "target": "es2018",
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "target": "ES2018",
+    "module": "CommonJS",
+    "moduleResolution": "Node",
     "resolveJsonModule": true,
     "lib": [
-      "es2018",
-      "es2019",
-      "es2020",
-      "esnext"
+      "ES2018",
+      "ES2019",
+      "ES2020",
+      "ESNext"
     ],
     "preserveConstEnums": true,
     "incremental": false,
