--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,7 +1,7 @@
 # These are supported funding model platforms
 
-github: # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2, KSXGitHub]
-patreon: # Replace with a single Patreon username
+github: # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
+patreon: khai96_
 open_collective: hoang-van-khai
 ko_fi: # Replace with a single Ko-fi username
 tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
@@ -9,4 +9,4 @@ community_bridge: # Replace with a single Community Bridge project-name e.g., cl
 liberapay: # Replace with a single Liberapay username
 issuehunt: ksxgithub
 otechie: # Replace with a single Otechie username
-custom: # Replace with a single custom sponsorship URL
+custom: # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
